fixed typos and made a few things more explicit
after external code review

--- a/Minimal Linearized min cost flow example for MPP.ipynb
+++ b/Minimal Linearized min cost flow example for MPP.ipynb
@@ -7,7 +7,7 @@
     "This is a minimalistic demonstration to transform the [minimum convex cost problem to find the most likely payment flow on the Lightning network](https://arxiv.org/abs/2107.05322) to a [piecewise linearized](https://en.wikipedia.org/wiki/Piecewise_linear_function) problem that can be solved in sub second time on the current channel graph with the help of a [linear min cost flow solver](https://developers.google.com/optimization/reference/graph/min_cost_flow). \n",
     "\n",
     "## Main idea and mathematical background of piece wise linearization\n",
-    "Using the ideas of [probabilistic payment delivery](https://arxiv.org/abs/2103.08576) (sometimes known as probabilistic path finding) which has been already [implemented](https://github.com/ElementsProject/lightning/pull/4771) and [tested by c-lightning](https://medium.com/blockstream/c-lightning-v0-10-2-bitcoin-dust-consensus-rule-33e777d58657) as well as [implemented by LDK](https://github.com/lightningdevkit/rust-lightning/pull/1227) (aka rust lightning) we know that the cost function to assign to assign the amount $a$ to a channel of capacity $c$ to use when selecting channels should be \n",
+    "Using the ideas of [probabilistic payment delivery](https://arxiv.org/abs/2103.08576) (sometimes known as probabilistic path finding) which has been already [implemented](https://github.com/ElementsProject/lightning/pull/4771) and [tested by c-lightning](https://medium.com/blockstream/c-lightning-v0-10-2-bitcoin-dust-consensus-rule-33e777d58657) as well as [implemented by LDK](https://github.com/lightningdevkit/rust-lightning/pull/1227) (aka rust lightning) we know that the cost function to **assign the amount $a$** to a **channel of capacity $c$** to use when selecting channels should be \n",
     "\n",
     "$f_c(a) = -\\log\\left(\\frac{c+1-a}{c+1}\\right)$ \n",
     "\n",
@@ -15,7 +15,7 @@
     "\n",
     "$l_c(a) = \\frac{a}{c}$\n",
     "\n",
-    "The linearized term is easy to compute and interprete: The cost of using the channel is $0$ if no amount is assigned to it and $1$ if the channel is fully saturated. For all other amounts the cost is just proportional to the fraction of saturation. (We note that this term (even thout we started to approximate the negativ log of the successprobability) is also the failure probabliity of a payment)\n",
+    "The linearized term is easy to compute and interprete: The cost of using the channel is $0$ if no amount is assigned to it and $1$ if the channel is fully saturated. Fully saturated means that we plan to use the full capacity which is very very likely to be more than the the actual available liquidity. For all other amounts the cost is just proportional to the fraction of saturation. (We note that this term (even thout we started to approximate the negativ log of the successprobability) is also the failure probabliity of a payment)\n",
     "\n",
     "However just using the linearized version yields two problems in practise: \n",
     "\n",
@@ -27,7 +27,7 @@
     "$L_c(a) = a\\cdot\\lfloor\\frac{C_{max}}{c}\\rfloor$\n",
     "\n",
     "\n",
-    "To mitigate the second problem instead of using a single linearized cost function on the entire channel we split the channel in $N$ sements (in our case of equal size to demonstrate a point about runtime. (From an approximation perspective one might want to use the optimal piecewise linear approximation which can also be found via: http://www.iaeng.org/publication/WCECS2008/WCECS2008_pp1191-1194.pdf). So when building the linear approximation of the **uncertainty network** instead of adding one channel with capacity $c$ for each channel we add $N$ channels each of capacity $\\frac{c}{N}$. The unit cost of the i-th piecewise linearized channel (with $i\\in\\{0,...,N-1\\}$) increases via the following formula: \n",
+    "To mitigate the second problem instead of using a single linearized cost function on the entire channel we split the channel in $N$ segments (in our case of equal size to demonstrate a point about runtime. (From an approximation perspective one might want to use the optimal piecewise linear approximation which can also be found via: http://www.iaeng.org/publication/WCECS2008/WCECS2008_pp1191-1194.pdf). So when building the linear approximation of the **uncertainty network** instead of adding one channel with capacity $c$ for each channel we add $N$ channels each of capacity $\\frac{c}{N}$. The unit cost of the i-th piecewise linearized channel (with $i\\in\\{0,...,N-1\\}$) increases via the following formula: \n",
     "\n",
     "$L_{c,i}(a) = L_{c}(a)\\cdot(i+1)$\n",
     "\n",
@@ -62,7 +62,7 @@
     "## Funding and Acknowledgements\n",
     "This research result is funded through [NTNU](https://www.ntnu.no) and [BitMEX](https://blog.bitmex.com/bitmex-2021-open-source-developer-grants/) as well as generous donations from the Bitcoin community via https://donate.ln.rene-pickhardt.de and via recurring donations at https://www.patreon.com/renepickhardt. If you want to learn why independet research and development for Bitoin and the Lightning Network is important I kindly refere you to: https://ln.rene-pickhardt.de/ of course I will be grateful if you consider my work of importance and decide to support it\n",
     "\n",
-    "Special Thanks to Stefan Richter and Carsten Otto for helpful discussions which lead me to the realization that the linearization itself was not the problem of my initial attempts to quickly compute an approximation of the problem but rather the usage of floating point unit costs which seem to be tricky even for linear solvers (yes math still surprises and amazes me)"
+    "Special Thanks to Stefan Richter and Carsten Otto for helpful discussions which lead me to the realization that the linearization itself was not the problem of my initial attempts to quickly compute an approximation of the problem but rather the usage of floating point unit costs which seem to be tricky even for linear solvers (yes math still surprises and amazes me). Also thanks to Peter for a code review and helpful discussion."
    ]
   },
   {
@@ -98,7 +98,8 @@
     "id_to_node_key = {}\n",
     "\n",
     "\n",
-    "#the will become the list of arcs that are actually stored in the \n",
+    "#the will become the list of arcs that are used to store the network for the solver\n",
+    "#arcs are a quadrouple of integers (src, dest, capacity, unit_cost)\n",
     "arcs = []\n",
     "\n",
     "#used to store the capacity of channels\n",
@@ -184,7 +185,6 @@
     "        node_ids.add(src)\n",
     "        node_ids.add(dest)\n",
     "        cap = c[\"satoshis\"]\n",
-    "        u = 1.0/cap\n",
     "        #FIXME: ignores the later used virtual combination of channels capacities into one large channel\n",
     "        if cap>max_cap:\n",
     "            max_cap = cap\n",
@@ -369,55 +369,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Planning to deliver 0.50 BTC from 2418(03efccf...) to 2982 (021c97a...) via an approximated optimally reliable payment flow...\n",
+      "Planning to deliver 0.50 BTC from 3097(03efccf...) to 3943 (021c97a...) via an approximated optimally reliable payment flow...\n",
       "\n",
-      "Runtime of flow computation: 0.78 sec \n",
+      "Runtime of flow computation: 0.83 sec \n",
       "Minimum approximated quadratic cost:  815932 \n",
       "\n",
       " Arc \t\t\t      Flow / Capacity \tprobability \tFee (sats)\n",
-      "2418 -> 11548     \t  6700000 / 16777215 \t0.600649\t8957.900000\n",
-      "2418 -> 13279     \t  1800000 / 9000000 \t0.800000\t2406.600000\n",
-      "2418 -> 9341     \t  1240000 / 6200000 \t0.800000\t1657.880000\n",
-      "2418 -> 1972     \t  6700000 / 16777215 \t0.600649\t8957.900000\n",
-      "2418 -> 9267     \t  2000000 / 10000000 \t0.800000\t2674.000000\n",
-      "5613 -> 9267     \t  3350000 / 2411344242 \t0.998611\t335.100000\n",
-      "9267 -> 683     \t  690000 / 6200000000 \t0.999889\t1.690000\n",
-      "7434 -> 5613     \t  3350000 / 20000000 \t0.832500\t34.500000\n",
-      "1972 -> 683     \t  6700000 / 100000000 \t0.933000\t3350.000000\n",
-      "5975 -> 2982     \t  6700000 / 200000000 \t0.966500\t33501.000000\n",
-      "2418 -> 7821     \t  3300000 / 15000000 \t0.780000\t4412.100000\n",
-      "14825 -> 3976     \t  6700000 / 1000000000 \t0.993300\t2010.000000\n",
-      "2418 -> 14825     \t  6700000 / 16777215 \t0.600649\t8957.900000\n",
-      "12581 -> 9341     \t  3350000 / 445000000 \t0.992472\t848.550000\n",
-      "2418 -> 7224     \t  2000000 / 10000000 \t0.800000\t2674.000000\n",
-      "2418 -> 1576     \t  6700000 / 16777215 \t0.600649\t8957.900000\n",
-      "2418 -> 10930     \t  3350000 / 16777215 \t0.800324\t4478.950000\n",
-      "3164 -> 683     \t  2160000 / 750000000 \t0.997120\t1080.000000\n",
-      "7821 -> 1576     \t  3300000 / 30000000 \t0.890000\t1155.000000\n",
-      "9341 -> 683     \t  21250000 / 3900000000 \t0.994551\t22.250000\n",
-      "12323 -> 683     \t  2000000 / 16775679 \t0.880780\t301.000000\n",
-      "2418 -> 12323     \t  2000000 / 10000000 \t0.800000\t2674.000000\n",
-      "13279 -> 683     \t  1800000 / 400000000 \t0.995500\t225.001000\n",
-      "340 -> 5975     \t  6700000 / 200000000 \t0.966500\t837.501000\n",
-      "10930 -> 12581     \t  3350000 / 16777215 \t0.800324\t663.300000\n",
-      "9267 -> 9341     \t  4660000 / 1100000000 \t0.995764\t5.660000\n",
-      "11012 -> 9341     \t  2000000 / 500000000 \t0.996000\t1000.001000\n",
-      "2418 -> 7434     \t  3350000 / 16777215 \t0.800324\t3.781000\n",
-      "11548 -> 10189     \t  6700000 / 500000000 \t0.986600\t837.501000\n",
-      "1605 -> 11012     \t  2000000 / 500000000 \t0.996000\t401.000000\n",
-      "3976 -> 340     \t  6700000 / 500000000 \t0.986600\t16750.000000\n",
-      "7522 -> 1605     \t  2000000 / 210000000 \t0.990476\t200.000000\n",
-      "2418 -> 13432     \t  2160000 / 10811137 \t0.800206\t2.591000\n",
-      "13432 -> 3164     \t  2160000 / 16777215 \t0.871254\t438.336000\n",
-      "1576 -> 9341     \t  10000000 / 300000000 \t0.966667\t2500.000000\n",
-      "2418 -> 14538     \t  2000000 / 10000000 \t0.800000\t2.431000\n",
-      "14538 -> 2982     \t  2000000 / 50000000 \t0.960000\t6001.000000\n",
-      "7224 -> 7522     \t  2000000 / 16777215 \t0.880791\t500.000000\n",
-      "683 -> 2982     \t  34600000 / 200000000 \t0.827000\t103766.400000\n",
-      "10189 -> 2982     \t  6700000 / 100000000 \t0.933000\t15216.700000\n",
+      "3097 -> 1974     \t  6700000 / 16777215 \t0.600649\t8957.900000\n",
+      "3097 -> 715     \t  1800000 / 9000000 \t0.800000\t2406.600000\n",
+      "3097 -> 15568     \t  1240000 / 6200000 \t0.800000\t1657.880000\n",
+      "3097 -> 5493     \t  6700000 / 16777215 \t0.600649\t8957.900000\n",
+      "3097 -> 13485     \t  2000000 / 10000000 \t0.800000\t2674.000000\n",
+      "15532 -> 13485     \t  3350000 / 2411344242 \t0.998611\t335.100000\n",
+      "13485 -> 601     \t  2310000 / 6200000000 \t0.999627\t3.310000\n",
+      "8983 -> 15532     \t  3350000 / 20000000 \t0.832500\t34.500000\n",
+      "5493 -> 601     \t  6700000 / 100000000 \t0.933000\t3350.000000\n",
+      "6707 -> 3943     \t  6700000 / 200000000 \t0.966500\t33501.000000\n",
+      "3097 -> 3517     \t  3300000 / 15000000 \t0.780000\t4412.100000\n",
+      "12312 -> 9981     \t  6700000 / 1000000000 \t0.993300\t2010.000000\n",
+      "3097 -> 12312     \t  6700000 / 16777215 \t0.600649\t8957.900000\n",
+      "10554 -> 15568     \t  3350000 / 445000000 \t0.992472\t848.550000\n",
+      "15568 -> 601     \t  19630000 / 3900000000 \t0.994967\t20.630000\n",
+      "3097 -> 1038     \t  2000000 / 10000000 \t0.800000\t2674.000000\n",
+      "3097 -> 14301     \t  6700000 / 16777215 \t0.600649\t8957.900000\n",
+      "3097 -> 13063     \t  3350000 / 16777215 \t0.800324\t4478.950000\n",
+      "11585 -> 601     \t  2160000 / 750000000 \t0.997120\t1080.000000\n",
+      "3517 -> 14301     \t  3300000 / 30000000 \t0.890000\t1155.000000\n",
+      "2315 -> 601     \t  2000000 / 16775679 \t0.880780\t301.000000\n",
+      "3097 -> 2315     \t  2000000 / 10000000 \t0.800000\t2674.000000\n",
+      "715 -> 601     \t  1800000 / 400000000 \t0.995500\t225.001000\n",
+      "6969 -> 6707     \t  6700000 / 200000000 \t0.966500\t837.501000\n",
+      "13063 -> 10554     \t  3350000 / 16777215 \t0.800324\t663.300000\n",
+      "13485 -> 15568     \t  3040000 / 1100000000 \t0.997236\t4.040000\n",
+      "11881 -> 15568     \t  2000000 / 500000000 \t0.996000\t1000.001000\n",
+      "3097 -> 8983     \t  3350000 / 16777215 \t0.800324\t3.781000\n",
+      "1974 -> 7249     \t  6700000 / 500000000 \t0.986600\t837.501000\n",
+      "2472 -> 11881     \t  2000000 / 500000000 \t0.996000\t401.000000\n",
+      "9981 -> 6969     \t  6700000 / 500000000 \t0.986600\t16750.000000\n",
+      "12077 -> 2472     \t  2000000 / 210000000 \t0.990476\t200.000000\n",
+      "3097 -> 10857     \t  2160000 / 10811137 \t0.800206\t2.591000\n",
+      "10857 -> 11585     \t  2160000 / 16777215 \t0.871254\t438.336000\n",
+      "14301 -> 15568     \t  10000000 / 300000000 \t0.966667\t2500.000000\n",
+      "3097 -> 8663     \t  2000000 / 10000000 \t0.800000\t2.431000\n",
+      "8663 -> 3943     \t  2000000 / 50000000 \t0.960000\t6001.000000\n",
+      "1038 -> 12077     \t  2000000 / 16777215 \t0.880791\t500.000000\n",
+      "601 -> 3943     \t  34600000 / 200000000 \t0.827000\t103766.400000\n",
+      "7249 -> 3943     \t  6700000 / 100000000 \t0.933000\t15216.700000\n",
       "\n",
       "Probability of entire flow: 0.0032\n",
-      "Total fee: 248799.423 sats \n",
+      "Total fee: 248797.803 sats \n",
       "Effective fee rate: 0.498 %\n",
       "Arcs included in payment flow: 40\n",
       "\n",
@@ -453,6 +453,13 @@
     "\n",
     "print(\"\\nDon't get confused by a low probability. The first attampt always has high uncertainty. We will learn fast in each consequitive round.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
