changed name of reviewer to full name (after persmission)
also added a comment to explain the index shifting of ln-node-ids to [0,...,len(nodes)]

--- a/Minimal Linearized min cost flow example for MPP.ipynb
+++ b/Minimal Linearized min cost flow example for MPP.ipynb
@@ -62,7 +62,7 @@
     "## Funding and Acknowledgements\n",
     "This research result is funded through [NTNU](https://www.ntnu.no) and [BitMEX](https://blog.bitmex.com/bitmex-2021-open-source-developer-grants/) as well as generous donations from the Bitcoin community via https://donate.ln.rene-pickhardt.de and via recurring donations at https://www.patreon.com/renepickhardt. If you want to learn why independet research and development for Bitoin and the Lightning Network is important I kindly refere you to: https://ln.rene-pickhardt.de/ of course I will be grateful if you consider my work of importance and decide to support it\n",
     "\n",
-    "Special Thanks to Stefan Richter and Carsten Otto for helpful discussions which lead me to the realization that the linearization itself was not the problem of my initial attempts to quickly compute an approximation of the problem but rather the usage of floating point unit costs which seem to be tricky even for linear solvers (yes math still surprises and amazes me). Also thanks to Peter for a code review and helpful discussion."
+    "Special Thanks to Stefan Richter and Carsten Otto for helpful discussions which lead me to the realization that the linearization itself was not the problem of my initial attempts to quickly compute an approximation of the problem but rather the usage of floating point unit costs which seem to be tricky even for linear solvers (yes math still surprises and amazes me). Also thanks to Peter Neuroth for a code review and helpful discussion."
    ]
   },
   {
@@ -192,6 +192,7 @@
     "    print(\"Max capacity is: \", max_cap)\n",
     "    \n",
     "    # let's initialize the look up tables for node_ids to integers from [0,...,#number of nodes]\n",
+    "    # this is necessary because of the API of the google OR min cost flow solver\n",
     "    for k, node_id in enumerate(node_ids):\n",
     "        node_key_to_id[node_id]=k\n",
     "        id_to_node_key[k]=node_id\n",
@@ -369,57 +370,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Planning to deliver 0.50 BTC from 3097(03efccf...) to 3943 (021c97a...) via an approximated optimally reliable payment flow...\n",
+      "Planning to deliver 0.50 BTC from 5051(03efccf...) to 13006 (021c97a...) via an approximated optimally reliable payment flow...\n",
       "\n",
-      "Runtime of flow computation: 0.83 sec \n",
+      "Runtime of flow computation: 0.85 sec \n",
       "Minimum approximated quadratic cost:  815932 \n",
       "\n",
       " Arc \t\t\t      Flow / Capacity \tprobability \tFee (sats)\n",
-      "3097 -> 1974     \t  6700000 / 16777215 \t0.600649\t8957.900000\n",
-      "3097 -> 715     \t  1800000 / 9000000 \t0.800000\t2406.600000\n",
-      "3097 -> 15568     \t  1240000 / 6200000 \t0.800000\t1657.880000\n",
-      "3097 -> 5493     \t  6700000 / 16777215 \t0.600649\t8957.900000\n",
-      "3097 -> 13485     \t  2000000 / 10000000 \t0.800000\t2674.000000\n",
-      "15532 -> 13485     \t  3350000 / 2411344242 \t0.998611\t335.100000\n",
-      "13485 -> 601     \t  2310000 / 6200000000 \t0.999627\t3.310000\n",
-      "8983 -> 15532     \t  3350000 / 20000000 \t0.832500\t34.500000\n",
-      "5493 -> 601     \t  6700000 / 100000000 \t0.933000\t3350.000000\n",
-      "6707 -> 3943     \t  6700000 / 200000000 \t0.966500\t33501.000000\n",
-      "3097 -> 3517     \t  3300000 / 15000000 \t0.780000\t4412.100000\n",
-      "12312 -> 9981     \t  6700000 / 1000000000 \t0.993300\t2010.000000\n",
-      "3097 -> 12312     \t  6700000 / 16777215 \t0.600649\t8957.900000\n",
-      "10554 -> 15568     \t  3350000 / 445000000 \t0.992472\t848.550000\n",
-      "15568 -> 601     \t  19630000 / 3900000000 \t0.994967\t20.630000\n",
-      "3097 -> 1038     \t  2000000 / 10000000 \t0.800000\t2674.000000\n",
-      "3097 -> 14301     \t  6700000 / 16777215 \t0.600649\t8957.900000\n",
-      "3097 -> 13063     \t  3350000 / 16777215 \t0.800324\t4478.950000\n",
-      "11585 -> 601     \t  2160000 / 750000000 \t0.997120\t1080.000000\n",
-      "3517 -> 14301     \t  3300000 / 30000000 \t0.890000\t1155.000000\n",
-      "2315 -> 601     \t  2000000 / 16775679 \t0.880780\t301.000000\n",
-      "3097 -> 2315     \t  2000000 / 10000000 \t0.800000\t2674.000000\n",
-      "715 -> 601     \t  1800000 / 400000000 \t0.995500\t225.001000\n",
-      "6969 -> 6707     \t  6700000 / 200000000 \t0.966500\t837.501000\n",
-      "13063 -> 10554     \t  3350000 / 16777215 \t0.800324\t663.300000\n",
-      "13485 -> 15568     \t  3040000 / 1100000000 \t0.997236\t4.040000\n",
-      "11881 -> 15568     \t  2000000 / 500000000 \t0.996000\t1000.001000\n",
-      "3097 -> 8983     \t  3350000 / 16777215 \t0.800324\t3.781000\n",
-      "1974 -> 7249     \t  6700000 / 500000000 \t0.986600\t837.501000\n",
-      "2472 -> 11881     \t  2000000 / 500000000 \t0.996000\t401.000000\n",
-      "9981 -> 6969     \t  6700000 / 500000000 \t0.986600\t16750.000000\n",
-      "12077 -> 2472     \t  2000000 / 210000000 \t0.990476\t200.000000\n",
-      "3097 -> 10857     \t  2160000 / 10811137 \t0.800206\t2.591000\n",
-      "10857 -> 11585     \t  2160000 / 16777215 \t0.871254\t438.336000\n",
-      "14301 -> 15568     \t  10000000 / 300000000 \t0.966667\t2500.000000\n",
-      "3097 -> 8663     \t  2000000 / 10000000 \t0.800000\t2.431000\n",
-      "8663 -> 3943     \t  2000000 / 50000000 \t0.960000\t6001.000000\n",
-      "1038 -> 12077     \t  2000000 / 16777215 \t0.880791\t500.000000\n",
-      "601 -> 3943     \t  34600000 / 200000000 \t0.827000\t103766.400000\n",
-      "7249 -> 3943     \t  6700000 / 100000000 \t0.933000\t15216.700000\n",
+      "5051 -> 8463     \t  6700000 / 16777215 \t0.600649\t8957.900000\n",
+      "5051 -> 3437     \t  1800000 / 9000000 \t0.800000\t2406.600000\n",
+      "5051 -> 9162     \t  1240000 / 6200000 \t0.800000\t1657.880000\n",
+      "5051 -> 14746     \t  6700000 / 16777215 \t0.600649\t8957.900000\n",
+      "5051 -> 14832     \t  2000000 / 10000000 \t0.800000\t2674.000000\n",
+      "6257 -> 14832     \t  3350000 / 2411344242 \t0.998611\t335.100000\n",
+      "14832 -> 12446     \t  5350000 / 6200000000 \t0.999137\t6.350000\n",
+      "7870 -> 6257     \t  3350000 / 20000000 \t0.832500\t34.500000\n",
+      "14746 -> 12446     \t  6700000 / 100000000 \t0.933000\t3350.000000\n",
+      "7914 -> 13006     \t  6700000 / 200000000 \t0.966500\t33501.000000\n",
+      "5051 -> 550     \t  3300000 / 15000000 \t0.780000\t4412.100000\n",
+      "11396 -> 13192     \t  6700000 / 1000000000 \t0.993300\t2010.000000\n",
+      "5051 -> 11396     \t  6700000 / 16777215 \t0.600649\t8957.900000\n",
+      "7199 -> 9162     \t  3350000 / 445000000 \t0.992472\t848.550000\n",
+      "9162 -> 12446     \t  16590000 / 3900000000 \t0.995746\t17.590000\n",
+      "5051 -> 13287     \t  2000000 / 10000000 \t0.800000\t2674.000000\n",
+      "5051 -> 1843     \t  6700000 / 16777215 \t0.600649\t8957.900000\n",
+      "5051 -> 11257     \t  3350000 / 16777215 \t0.800324\t4478.950000\n",
+      "1953 -> 12446     \t  2160000 / 750000000 \t0.997120\t1080.000000\n",
+      "550 -> 1843     \t  3300000 / 30000000 \t0.890000\t1155.000000\n",
+      "12756 -> 12446     \t  2000000 / 16775679 \t0.880780\t301.000000\n",
+      "5051 -> 12756     \t  2000000 / 10000000 \t0.800000\t2674.000000\n",
+      "3437 -> 12446     \t  1800000 / 400000000 \t0.995500\t225.001000\n",
+      "6713 -> 7914     \t  6700000 / 200000000 \t0.966500\t837.501000\n",
+      "11257 -> 7199     \t  3350000 / 16777215 \t0.800324\t663.300000\n",
+      "10914 -> 9162     \t  2000000 / 500000000 \t0.996000\t1000.001000\n",
+      "5051 -> 7870     \t  3350000 / 16777215 \t0.800324\t3.781000\n",
+      "8463 -> 5288     \t  6700000 / 500000000 \t0.986600\t837.501000\n",
+      "2781 -> 10914     \t  2000000 / 500000000 \t0.996000\t401.000000\n",
+      "13192 -> 6713     \t  6700000 / 500000000 \t0.986600\t16750.000000\n",
+      "32 -> 2781     \t  2000000 / 210000000 \t0.990476\t200.000000\n",
+      "5051 -> 9530     \t  2160000 / 10811137 \t0.800206\t2.591000\n",
+      "9530 -> 1953     \t  2160000 / 16777215 \t0.871254\t438.336000\n",
+      "1843 -> 9162     \t  10000000 / 300000000 \t0.966667\t2500.000000\n",
+      "5051 -> 14642     \t  2000000 / 10000000 \t0.800000\t2.431000\n",
+      "14642 -> 13006     \t  2000000 / 50000000 \t0.960000\t6001.000000\n",
+      "13287 -> 32     \t  2000000 / 16777215 \t0.880791\t500.000000\n",
+      "12446 -> 13006     \t  34600000 / 200000000 \t0.827000\t103766.400000\n",
+      "5288 -> 13006     \t  6700000 / 100000000 \t0.933000\t15216.700000\n",
       "\n",
       "Probability of entire flow: 0.0032\n",
-      "Total fee: 248797.803 sats \n",
+      "Total fee: 248793.763 sats \n",
       "Effective fee rate: 0.498 %\n",
-      "Arcs included in payment flow: 40\n",
+      "Arcs included in payment flow: 39\n",
       "\n",
       "Don't get confused by a low probability. The first attampt always has high uncertainty. We will learn fast in each consequitive round.\n"
      ]
