--- a/paper/mppSplitting.tex
+++ b/paper/mppSplitting.tex
@@ -417,7 +417,7 @@ Again, all numbers are from the heuristic, but the exact algorithm performed nea
 We could not find any preexisting open source software implementing the solution of the integer minimum cost flow problem for arbitrary separable convex cost functions.
 We therefore share the source code of the described algorithms and methods as well as the latex sources of this document with an open MIT license at: \url{https://github.com/renepickhardt/mpp-splitter}.
 This repository consists of Scala- and Python-based example implementations of the exact min-cost flow algorithm described in~\cite[p.~556ff]{ahuja1993network} for a separable convex cost function.
-It also includes a minimalist simulation framework in Python to test the practicality of the round-based payment loop.
+It also includes a minimalistic simulation framework in Python to test the practicality of the round-based payment loop.
 The Scala version includes example code to demonstrate the usage of the Lagrangian relaxation.
 
 
